--- a/blog/关于原型链的基本知识.md
+++ b/blog/关于原型链的基本知识.md
@@ -1,8 +1,18 @@
 关键词
 --
 
-_pro_ : 
+构造函数创建
+```
+function Person(){
 
+}
 
+new person = new Person();
+person.name = "xiaqijian";
+console.log(person.name)
+
+```
+
+Person是构造函数，person是利用new创建Person一个实例
 
 - 原型，原型链，实例，构造函数
