--- a/blog/关于原型链的基本知识.md
+++ b/blog/关于原型链的基本知识.md
@@ -3,6 +3,7 @@
 
 构造函数创建
 ```
+<script stype="text/script">
 function Person(){
 
 }
@@ -10,7 +11,7 @@ function Person(){
 new person = new Person();
 person.name = "xiaqijian";
 console.log(person.name)
-
+</script>
 ```
 
 Person是构造函数，person是利用new创建Person一个实例
