--- a/blog/关于原型链的基本知识.md
+++ b/blog/关于原型链的基本知识.md
@@ -16,4 +16,4 @@ console.log(person.name)
 
 Person是构造函数，person是利用new创建Person一个实例
 
-- 原型，原型链，实例，构造函数
+![img](https://github.com/mqyqingfeng/Blog/raw/master/Images/prototype4.png)
